PORTFOLIO: Fixed some styling on navmenu. Added some placeholder text and sections for hero and second section and styled the y-overflow and snap to start so that each section will take up 100vh and snap to start of next section on scroll. Now to work on mobile menu.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,17 +8,28 @@ span.brand__secondary {
   font-size: calc(var(--base-font-size) * 2);
 }
 
-.main {
+.mainWrapper {
+  width: 100%;
+  height: 100vh;
+  /* Start of snap to scroll. */
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.sectionWrapper {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  /* Vertical align flex row center. */
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  /* TODO: Update margin top if any of background shows on different view ports. */
-  margin-top: 4.8rem;
-  /* TODO: Un-comment red background for testing. */
-  /* background: red; */
+  /* Horizontal align flex row center. */
+  justify-content: center;
+  /* On scroll snaps to start of next section. */
+  scroll-snap-align: start;
+}
+
+.sectionContent {
+  max-width: 60rem;
 }
 
 .grid {
@@ -57,14 +68,6 @@ span.brand__secondary {
   text-wrap: balance;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -98,10 +101,6 @@ span.brand__secondary {
 
   .card h2 {
     margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
   }
 }
 
