--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
+  --max-width: 80rem;
+  --border-radius: 0.75rem;
   /* HEX #f5f5f5 */
   --wild-sand-rgb: 245, 245, 245;
   /* HEX #0f1626 */
@@ -10,19 +10,14 @@
   /* HEX #ab987a */
   --sandrift-rgb: 171, 152, 122;
   /* PX 18 */
-  --base-font-size: 1.125rem;
+  --base-font-size: 1rem;
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-  }
-} */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-size: var(--base-font-size);
+  /* font-size: var(--base-font-size); */
 }
 
 html,
